
- Date:
  . Fixed bug GH-9891 (DateTime modify with unixtimestamp (@) must work like
    setTimestamp). (Derick)
  . Fixed bug GH-10218 (DateTimeZone fails to parse time zones that contain the
    "+" character). (Derick)

- Fiber:
  . Fix assertion on stack allocation size. (nielsdos)

- FPM:
  . Fixed bug GH-9981 (FPM does not reset fastcgi.error_header).
    (Jakub Zelenka)

- LDAP:
  . Fixed bug GH-10112 (LDAP\Connection::__construct() refers to ldap_create()).
    (cmb)

- MBString:
  . Fixed: mb_strlen (and a couple of other mbstring functions) would wrongly treat 0x80, 0xFD, 0xFE, 0xFF, and certain other byte values as the first byte of a 2-byte SJIS character. (Alex Dowad)

- Opcache:
  . Fix inverted bailout value in zend_runtime_jit() (Max Kellermann).
  . Fix access to uninitialized variable in accel_preload(). (nielsdos)
  . Fix zend_jit_find_trace() crashes. (Max Kellermann)
  . Added missing lock for EXIT_INVALIDATE in zend_jit_trace_exit. (Max Kellermann)

- PHPDBG:
  . Fix undefined behaviour in phpdbg_load_module_or_extension(). (nielsdos)
  . Fix NULL pointer dereference in phpdbg_create_conditional_breal(). (nielsdos)
  . Fix GH-9710: phpdbg memory leaks by option "-h" (nielsdos)

- Posix:
  . Fix memory leak in posix_ttyname() (girgias)

- Standard:
  . Fix GH-10187 (Segfault in stripslashes() with arm64). (nielsdos)

- TSRM:
  . Fixed Windows shmget() wrt. IPC_PRIVATE. (Tyson Andre)

05 Jan 2023, PHP 8.1.14

- Core:
  . Fixed bug GH-9905 (constant() behaves inconsistent when class is undefined).
    (cmb)
  . Fixed bug GH-9918 (License information for xxHash is not included in
    README.REDIST.BINS file). (Akama Hitoshi)
  . Fixed bug GH-9650 (Can't initialize heap: [0x000001e7]). (Michael Voříšek)
  . Fixed potentially undefined behavior in Windows ftok(3) emulation. (cmb)

- Date:
  . Fixed bug GH-9699 (DateTimeImmutable::diff differences in 8.1.10 onwards -
    timezone related). (Derick)